deployment/helm/gcp-staging/public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onyx-staging-chat
  namespace: onyx
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: onyx-staging-chat-ip
    networking.gke.io/managed-certificates: onyx-staging-chat-cert
    networking.gke.io/v1beta1.FrontendConfig: onyx-staging-https
spec:
  rules:
    - host: chat-staging.vibecloud.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onyx-nginx-controller
                port:
                  number: 80
